--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,6 @@
 .App-work{
   text-align: center;
   padding-top: 2rem;
-  padding-left: 3%;
-  padding-right: 3%;
 }
 
 .App-contact {
@@ -63,9 +61,9 @@ a.btn.btn-link {
 }
 
 .card {
-  font-size: 22px;
+  font-size: calc(5px + 2vmin);
   position: absolute;
-  left: 25%;
+  left: .33%;
   top: 25%;
 }
 
