--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@ a.btn.btn-link {
 .card {
   font-size: calc(5px + 2vmin);
   position: absolute;
-  left: .33%;
+  margin-left: 5rem;
+  margin-right: 5rem;
   top: 25%;
 }
 
